员工编辑有错误，查询未写

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,4 +46,24 @@
         <url-pattern>/controller/position/*</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>employeeController</servlet-name>
+        <servlet-class>com.ideashin.attendance.controller.EmployeeController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>employeeController</servlet-name>
+        <url-pattern>/controller/employee/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>departmentController</servlet-name>
+        <servlet-class>com.ideashin.attendance.controller.DepartmentController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>departmentController</servlet-name>
+        <url-pattern>/controller/department/*</url-pattern>
+    </servlet-mapping>
+
 </web-app>
