修改note的申请人和代理人的查看选择方式前

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -66,4 +66,13 @@
         <url-pattern>/controller/department/*</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>adminController</servlet-name>
+        <servlet-class>com.ideashin.attendance.controller.AdminController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>adminController</servlet-name>
+        <url-pattern>/controller/admin/*</url-pattern>
+    </servlet-mapping>
 </web-app>
