--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
-      <scope>test</scope>
+<!--      <scope>test</scope>-->
     </dependency>
     <!-- https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils -->
     <dependency>
